# pre-commit_tools

./: .gitignore  .pre-commit-hooks.yaml  README.md  package-lock.json  package.json  pyproject.toml
.pre-commit-hooks/: check_coverage.sh  generate_sample_file_expire.sh  generate_toml_config_expire.sh
generate_sample_env_file/: main.js
generate_sample_toml_file/: config.toml.sample  main.py
